# commonqt5

./: .gitignore  CMakeLists.txt  commonqt.cpp  connect.lisp  ffi.lisp  image-utils.lisp  info.lisp  meta.lisp  package.lisp  qapp.lisp  qt+libs.asd  qt.asd  reader.lisp  repl-integration.lisp
tutorial/: t14.lisp
